--- a/Amtrak_NJ_Transit_Unsupervised_Learning_Capstone.ipynb
+++ b/Amtrak_NJ_Transit_Unsupervised_Learning_Capstone.ipynb
@@ -6,7 +6,7 @@
       "name": "Amtrak/NJ Transit Unsupervised Learning Capstone",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPALI53U2O9TbDT3M0z5Agz",
+      "authorship_tag": "ABX9TyP1V5sp4qwib/oLEpYSezS9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
       "source": [
         "### DATA:\n",
         "\n",
-        "This dataset can be found on [Kaggle](https://https://www.kaggle.com/pranavbadami/nj-transit-amtrak-nec-performance), provided by the user Pranav Badami.\n",
+        "This dataset can be found on [Kaggle](https://www.kaggle.com/pranavbadami/nj-transit-amtrak-nec-performance), provided by the user Pranav Badami.\n",
         "\n",
         "This dataset contains monthly CSVs covering the performance of nearly every train trip on the NJ Transit rail network from March 2018 to May 2020.  I will be covering the most recent data, May 2020 to predict as accurately as possible the current amount of delay.\n"
       ]
