--- a/Mobile_User_Demographics_Proposal.ipynb
+++ b/Mobile_User_Demographics_Proposal.ipynb
@@ -6,7 +6,7 @@
       "name": "Mobile User Demographics Proposal",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPnaPVfDITDa0stilQgkI6b",
+      "authorship_tag": "ABX9TyNl0RIa/yAXcVKrTtzSqwXh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,40 +36,6 @@
       "source": [
         "Today, I am exploring the dataset: [TalkingData Mobile User Demographic](https://https://www.kaggle.com/c/talkingdata-mobile-user-demographics/data.) from Kaggle, by user and Chinese Mobile Platforming firm, **TalkingData**\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xWEW-zZrSrlF",
-        "outputId": "6ccfc3a1-fbcc-47e2-9adb-dc19d7aac47a"
-      },
-      "source": [
-        "#EDA Imports\n",
-        "from google.colab import drive \n",
-        "drive.mount('/content/gdrive')\n",
-        "import os\n",
-        "os.environ['KAGGLE_CONFIG_DIR'] = \"/content/gdrive/\"\n",
-        "%cd \"/content/gdrive/My Drive/Final Capstone\"\n",
-        "import pandas as pd\n",
-        "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt\n",
-        "from sklearn.preprocessing import MultiLabelBinarizer\n",
-        "\n"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n",
-            "/content/gdrive/My Drive/Final Capstone\n"
-          ]
-        }
       ]
     },
     {
@@ -110,6 +76,40 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xWEW-zZrSrlF",
+        "outputId": "0fdde70d-3c86-4182-f022-99abb59c2bd3"
+      },
+      "source": [
+        "#EDA Imports\n",
+        "from google.colab import drive \n",
+        "drive.mount('/content/gdrive')\n",
+        "import os\n",
+        "os.environ['KAGGLE_CONFIG_DIR'] = \"/content/gdrive/\"\n",
+        "%cd \"/content/gdrive/My Drive/Final Capstone\"\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.preprocessing import MultiLabelBinarizer\n",
+        "\n"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n",
+            "/content/gdrive/My Drive/Final Capstone\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "vOBmcLEnyft1"
       },
       "source": [
@@ -122,7 +122,7 @@
         "category_labels = pd.read_csv(\"label_categories.csv\")\n",
         "phone_brand = pd.read_csv(\"phone_brand_device_model.csv\")\n"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -133,12 +133,12 @@
           "height": 202
         },
         "id": "cuwlbBz00Zks",
-        "outputId": "82ea0e24-a67d-4336-bf09-52af62eff20c"
+        "outputId": "d8da9394-0663-4900-a1b1-eba79f1d8867"
       },
       "source": [
         "app_labels.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,7 +206,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -218,12 +218,12 @@
           "height": 202
         },
         "id": "CH6q3T2C0cL1",
-        "outputId": "42d810cd-d7a3-4134-ecc5-fd7d4992f93d"
+        "outputId": "b20f0132-7b81-4b7d-c5bd-bf1fbad0db1b"
       },
       "source": [
         "events.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -309,7 +309,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -321,12 +321,12 @@
           "height": 202
         },
         "id": "CjqwS_a50cRR",
-        "outputId": "84ad74f1-6ce1-4ade-9621-3a6d3affce33"
+        "outputId": "239e1af1-0990-47ed-989a-866ddca4ad5a"
       },
       "source": [
         "app_labels.head()\n"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +394,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -406,12 +406,12 @@
           "height": 202
         },
         "id": "av63R5RK0cWR",
-        "outputId": "dbd96992-4cbf-49e4-ebb8-5eb6bad37711"
+        "outputId": "f04de4e4-403b-4bd2-87b7-cfdf2074d7af"
       },
       "source": [
         "category_labels.head()\n"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -479,7 +479,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -491,12 +491,12 @@
           "height": 202
         },
         "id": "9maW2GAs0cgt",
-        "outputId": "2a7a29f2-fa87-462e-8efc-d85e45599bdb"
+        "outputId": "7f054012-43d1-4072-b77e-bf48f821be7e"
       },
       "source": [
         "gender_age_train.head()\n"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -576,7 +576,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -588,12 +588,12 @@
           "height": 202
         },
         "id": "1iJDaPiB0oGE",
-        "outputId": "219db67e-2f9a-4d3b-ea74-cb6579845c96"
+        "outputId": "b4758f46-a40e-4609-9f31-a9caa9ca9400"
       },
       "source": [
         "phone_brand.head()\n"
       ],
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -667,77 +667,8 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 10
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "O-QYxljF0s81"
-      },
-      "source": [
-        "### Below are translations for the various Chinese symbols used as names for  device_models and phone_brand features.\n",
-        "\n",
-        "\n",
-        "```\n",
-        "三星 samsung\n",
-        "天语 Ktouch\n",
-        "海信 hisense\n",
-        "联想 lenovo\n",
-        "欧比 obi\n",
-        "爱派尔 ipair\n",
-        "努比亚 nubia\n",
-        "优米 youmi\n",
-        "朵唯 dowe\n",
-        "黑米 heymi\n",
-        "锤子 hammer\n",
-        "酷比魔方 koobee\n",
-        "美图 meitu\n",
-        "尼比鲁 nibilu\n",
-        "一加 oneplus\n",
-        "优购 yougo\n",
-        "诺基亚 nokia\n",
-        "糖葫芦 candy\n",
-        "中国移动 ccmc\n",
-        "语信 yuxin\n",
-        "基伍 kiwu\n",
-        "青橙 greeno\n",
-        "华硕 asus\n",
-        "夏新 panosonic\n",
-        "维图 weitu\n",
-        "艾优尼 aiyouni\n",
-        "摩托罗拉 moto\n",
-        "乡米 xiangmi\n",
-        "米奇 micky\n",
-        "大可乐 bigcola\n",
-        "沃普丰 wpf\n",
-        "神舟 hasse\n",
-        "摩乐 mole\n",
-        "飞秒 fs\n",
-        "米歌 mige\n",
-        "富可视 fks\n",
-        "德赛 desci\n",
-        "梦米 mengmi\n",
-        "乐视 lshi\n",
-        "小杨树 smallt\n",
-        "纽曼 newman\n",
-        "邦华 banghua\n",
-        "E派 epai\n",
-        "易派 epai\n",
-        "普耐尔 pner\n",
-        "欧新 ouxin\n",
-        "西米 ximi\n",
-        "海尔 haier\n",
-        "波导 bodao\n",
-        "糯米 nuomi\n",
-        "唯米 weimi\n",
-        "酷珀 kupo\n",
-        "谷歌 google\n",
-        "昂达 ada\n",
-        "聆韵 lingyun\n",
-        "```\n",
-        "A dictionary will be used to convert to them to English\n"
       ]
     },
     {
@@ -810,7 +741,9 @@
         "id": "INzLRus14Ysv"
       },
       "source": [
-        "### Exploratory Data Analysis"
+        "### Exploratory Data Analysis\n",
+        "\n",
+        "Merging Datasets together"
       ]
     },
     {
@@ -822,7 +755,7 @@
         "# Merging app_events and event_id through event_id column\n",
         "merged_events = pd.merge(app_events, events, on=\"event_id\")\n"
       ],
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -834,7 +767,7 @@
         "# Merging app_labels and category_labels through label_id\n",
         "merged_apps = pd.merge(app_labels, category_labels, on=\"label_id\")\n"
       ],
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -877,16 +810,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "A8ctYqZd5ize"
+        "id": "DI23bHG166b1"
       },
       "source": [
-        "### Translating Phone Brands to English"
+        "Translating phone brands to english"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2W8WLzEr5pI1"
+        "id": "cej_tnn36Joe"
       },
       "source": [
         "to_english = {\n",
@@ -960,7 +893,7 @@
         "    \"聆韵\": \"lingyun\",\n",
         "}\n"
       ],
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": []
     }
   ]
