--- a/Mobile_User_Demographics_Proposal.ipynb
+++ b/Mobile_User_Demographics_Proposal.ipynb
@@ -15,7 +15,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -80,7 +81,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xWEW-zZrSrlF",
-        "outputId": "0fdde70d-3c86-4182-f022-99abb59c2bd3"
+        "outputId": "b0a1f0d0-a1df-4d3e-fa42-45d84319f0c0"
       },
       "source": [
         "#EDA Imports\n",
@@ -95,13 +96,13 @@
         "from sklearn.preprocessing import MultiLabelBinarizer\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n",
+            "Mounted at /content/gdrive\n",
             "/content/gdrive/My Drive/Final Capstone\n"
           ]
         }
@@ -122,23 +123,23 @@
         "category_labels = pd.read_csv(\"label_categories.csv\")\n",
         "phone_brand = pd.read_csv(\"phone_brand_device_model.csv\")\n"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "cuwlbBz00Zks",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
         },
-        "id": "cuwlbBz00Zks",
-        "outputId": "d8da9394-0663-4900-a1b1-eba79f1d8867"
+        "outputId": "db2ab1df-c099-461a-a8e1-64baadf88b3c"
       },
       "source": [
         "app_labels.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,24 +207,24 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "CH6q3T2C0cL1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
         },
-        "id": "CH6q3T2C0cL1",
-        "outputId": "b20f0132-7b81-4b7d-c5bd-bf1fbad0db1b"
+        "outputId": "f11cf608-4f9e-4d4d-d8a5-fd49a47956c7"
       },
       "source": [
         "events.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -309,24 +310,24 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "CjqwS_a50cRR",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
         },
-        "id": "CjqwS_a50cRR",
-        "outputId": "239e1af1-0990-47ed-989a-866ddca4ad5a"
+        "outputId": "bf6b8ea8-f353-4033-80a3-a08f62a5092b"
       },
       "source": [
         "app_labels.head()\n"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,24 +395,24 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "av63R5RK0cWR",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
         },
-        "id": "av63R5RK0cWR",
-        "outputId": "f04de4e4-403b-4bd2-87b7-cfdf2074d7af"
+        "outputId": "23b4cdf4-4df0-4aa0-d2f3-2b082b210910"
       },
       "source": [
         "category_labels.head()\n"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -479,24 +480,24 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "9maW2GAs0cgt",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
         },
-        "id": "9maW2GAs0cgt",
-        "outputId": "7f054012-43d1-4072-b77e-bf48f821be7e"
+        "outputId": "d6bbc6fc-ea99-446d-a069-5eb55b9224aa"
       },
       "source": [
         "gender_age_train.head()\n"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -576,24 +577,24 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "1iJDaPiB0oGE",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
         },
-        "id": "1iJDaPiB0oGE",
-        "outputId": "b4758f46-a40e-4609-9f31-a9caa9ca9400"
+        "outputId": "31a7364c-1a38-47e1-c155-1ba0445bfdf3"
       },
       "source": [
         "phone_brand.head()\n"
       ],
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -667,7 +668,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         }
       ]
     },
@@ -755,7 +756,7 @@
         "# Merging app_events and event_id through event_id column\n",
         "merged_events = pd.merge(app_events, events, on=\"event_id\")\n"
       ],
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -767,7 +768,7 @@
         "# Merging app_labels and category_labels through label_id\n",
         "merged_apps = pd.merge(app_labels, category_labels, on=\"label_id\")\n"
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -893,7 +894,7 @@
         "    \"聆韵\": \"lingyun\",\n",
         "}\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     }
   ]
